# amx-intro

./: .gitignore  CMakeLists.txt  README.md  mamo.md
amx-t10/: CMakeLists.txt  README.md  t10_amx_8x16.c  t10_amx_8x16.h  t10_mhd.c  t10_mhd_amx.c  t10_mhd_gpu.c  t10_mhd_naive.c
amx-t11/: .gitignore  CMakeLists.txt  README.md  t11_mhd.c  t11_sim.c  t11_sim.h  t11_task_amx.c  t11_task_gpu.c  t11_task_naive.c
amx-t12/: CMakeLists.txt  README.md  t12_gen.cpp  t12_tile1.c  t12_tile3.c  t12_tile6.c
amx-t13/: CMakeLists.txt  README.md  t13_amx.c  t13_gen.c  t13_generate.c  t13_matrix.h  t13_naive.c
amx-t2/: CMakeLists.txt  Makefile  memo-0410.md  memo-0417.md  memo.md  memo.txt
amx-t20/: CMakeLists.txt  README.md  t20_amx.c  t20_avx.c  t20_graph.py  t20_naive.c  t20_profile.py  t20_table.py
amx-t21/: .gitignore  CMakeLists.txt  README.md  t21_amx.c  t21_avx.c  t21_generate.cpp  t21_pro.sh  t21_profile.py  t21_summary.py  t21_table.py
amx-t25/: .gitignore  CMakeLists.txt  README.md  t25_amx.c  t25_amx_p.c  t25_forward.h  t25_naive.c
amx-t26/: CMakeLists.txt  README.md  t26_amx.c  t26_forward.h  t26_naive.c
amx-t27/: .gitignore  CMakeLists.txt  README.md  t27_amx.c  t27_amx_o2.c  t27_amx_o3.c  t27_amx_o4.c  t27_forward.h  t27_gpu.c  t27_naive.c  t27_profile.py  t27_table.py
amx-t3/: CMakeLists.txt  Makefile  README.md
amx-t3/src/: AmxCalculator.cpp  AmxCalculator.h  Matrix.cpp  Matrix.h  Utils.h  main.cpp
amx-t30/: CMakeLists.txt  README.md  t30_mhd.c  t30_sim.c  t30_sim.h  t30_task_amx.c  t30_task_gpu.c  t30_task_naive.c
amx-t4/: .gitignore  Makefile  (+5 more)
(+62 files in other folders)
