cmake_minimum_required(VERSION 3.28)
project(amx_intro)

include_directories("/opt/system/app/intel/2023.2/compiler/2023.2.4/linux/compiler/include/icc")

add_subdirectory(amx-tmul)

add_subdirectory(amx-t2)

add_subdirectory(amx-t3)

add_subdirectory(amx-t4)

add_subdirectory(amx-t5)

add_subdirectory(amx-t6)

add_subdirectory(amx-t7)

add_subdirectory(amx-t8)
